# mailform-rs

./: .gitignore  Cargo.toml  README.md  config.example.env  config.example.json  flake.nix  mailform-rs.code-workspace
src/: cli.rs  lib.rs  main.rs
src/extensions/: error.rs
src/http/: router.rs
src/mailform/: config.rs  models.rs  service.rs
src/service/: config.rs  error.rs  mod.rs  models.rs  service.rs
