[package]
name = "mailform-rs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Contact us form processor."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
clap = { version = "4.5.3", optional = true, default-features = false, features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "usage",
] }
config = { version = "0.14.0", optional = true, default-features = false, features = [
    "convert-case",
] }
lettre = "0.10"
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.7", features = ["rust_1_61"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[features]
cli = ["clap", "config"]
