[package]
name = "mailform-rs"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Contact us form processor."

[dependencies]
axum = "0.6"
clap = { version = "4.5.3", optional = true, default-features = false, features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "usage",
] }
config = { version = "0.14.0", optional = true, default-features = false, features = [
    "convert-case",
] }
env_logger = { version = "0.11.3", optional = true }
hyperlocal = { version = "0.8.0", optional = true, default-features = false, features = [
    "server",
] }
lettre = "0.10"
log = { version = "0.4.21", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.7", features = ["rust_1_61"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[features]
cli = [
    "clap",
    "config",
    "hyperlocal",
    "log",
    "tracing/log",
    "env_logger",
    "pretty_env_logger",
]
