[package]
name = "mailform-rs"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Contact us form processor."

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
clap = { version = "4.5.3", optional = true, default-features = false, features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "usage",
] }
config = { version = "0.14", optional = true, default-features = false, features = [
    "convert-case",
] }
env_logger = { version = "0.11", optional = true }
lettre = { version = "0.11", features = [
    "serde",
    "tracing",
    "smtp-transport",
    "native-tls",
    "hostname",
    "builder",
], default-features = false }
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.8", features = ["rust_1_61"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-listener = { version = "0.3.2", optional = true, features = [
    "axum07",
    "serde",
] }
tracing = "0.1"
uuid = { version = "1.8.0", features = ["v4"] }

[features]
cli = [
    "clap",
    "config",
    "env_logger",
    "log",
    "pretty_env_logger",
    "tracing/log",
    "tokio-listener",
]
